# keyboard_mapper

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt  run.py
src/keyboard_layout_mapper/: __init__.py  __main__.py  config.py  hotkey.py  input_handler.py  input_sender.py  main.py  mapper.py  ui.py
tests/: test_mapper.py
