[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "keyboard-layout-mapper"
version = "2.0.0"
description = "Keyboard layout converter with global hotkey for Persian/English"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.6",
    "pynput>=1.7",
    "python-xlib>=0.33",
]

[project.scripts]
changekeyboard = "keyboard_layout_mapper.main:main"

[project.urls]
Homepage = "https://github.com/mtgama/lang_change"
Issues = "https://github.com/mtgama/lang_change/issues"

[tool.setuptools.packages.find]
where = ["src"]
